# slot-robot

./: .gitignore  pyproject.toml  setup.py
example/: dataset.py  eval.py  model.py  model_v2.py  panda_wrapper.py  params_parser.py  scenes.yaml  scenes_generation.py  test.py  train.py  train_v.py  visualizer.py
example/generated_scenes/: scenes_data.json
